write first sections of papers

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -1,3 +1,127 @@
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%LITERATURE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+@article{Axelrod1980a,
+author = {Robert Axelrod},
+title ={Effective Choice in the Prisoner's Dilemma},
+journal = {Journal of Conflict Resolution},
+volume = {24},
+number = {1},
+pages = {3-25},
+year = {1980},
+doi = {10.1177/002200278002400101},
+URL = { 
+        https://doi.org/10.1177/002200278002400101},
+eprint = { 
+        https://doi.org/10.1177/002200278002400101}
+}
+@article{Axelrod1980b,
+  title={More effective choice in the prisoner's dilemma},
+  author={Axelrod, Robert},
+  journal={Journal of Conflict Resolution},
+  volume={24},
+  number={3},
+  pages={379--403},
+  year={1980},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+@article{Axelrod1981,
+  title={The evolution of cooperation},
+  author={Axelrod, Robert and Hamilton, William D},
+  journal={science},
+  volume={211},
+  number={4489},
+  pages={1390--1396},
+  year={1981},
+  publisher={American Association for the Advancement of Science}
+}
+@article{Molander1985,
+ ISSN = {00220027, 15528766},
+ URL = {http://www.jstor.org/stable/174244},
+ author = {P. Molander},
+ journal = {The Journal of Conflict Resolution},
+ number = {4},
+ pages = {611-618},
+ publisher = {Sage Publications, Inc.},
+ title = {The Optimal Level of Generosity in a Selfish, Uncertain Environment},
+ volume = {29},
+ year = {1985}
+}
+@article{Hammerstein1984,
+title={Gaps in Harley's argument on evolutionarily stable learning rules and in
+the logic of “tit for tat”},
+volume={7},
+DOI={10.1017/S0140525X00026479},
+number={1},
+journal={Behavioral and Brain Sciences},
+publisher={Cambridge University Press},
+author={R. Selten and P. Hammerstein},
+year={1984},
+pages={115–116}
+}
+@article{Bendor1991,
+ ISSN = {00220027, 15528766},
+ author = {J. Bendor and R. M. Kramer and S. Stout},
+ URL = {http://www.jstor.org/stable/174072},
+ journal = {The Journal of Conflict Resolution},
+ number = {4},
+ pages = {691-719},
+ publisher = {Sage Publications, Inc.},
+ title = {When in Doubt... Cooperation in a Noisy Prisoner's Dilemma},
+ volume = {35},
+ year = {1991}
+}
+@book{Donninger1986,
+author="C. Donninger",
+editor="A. Diekmann and P. Mitter",
+title="Is it Always Efficient to be Nice? A Computer Simulation of Axelrod's Computer Tournament",
+bookTitle="Paradoxical Effects of Social Behavior: Essays in Honor of Anatol Rapoport",
+year="1986",
+publisher="Physica-Verlag HD",
+address="Heidelberg",
+pages="123--134",
+isbn="978-3-642-95874-8",
+doi="10.1007/978-3-642-95874-8_9",
+url="https://doi.org/10.1007/978-3-642-95874-8_9"
+}
+@article{Nowak1993,
+  title={A strategy of win-stay, lose-shift that outperforms tit-for-tat in the Prisoner's Dilemma game},
+  author={Nowak, Martin and Sigmund, Karl},
+  journal={Nature},
+  volume={364},
+  number={6432},
+  pages={56},
+  year={1993},
+  publisher={Nature Publishing Group}
+}
+@article{Nowak1992,
+  title={Tit for tat in heterogeneous populations},
+  author={Nowak, Martin A and Sigmund, Karl},
+  journal={Nature},
+  volume={355},
+  number={6357},
+  pages={250},
+  year={1992},
+  publisher={Nature Publishing Group}
+}
+@article{Press2012,
+  title={Iterated Prisoner’s Dilemma contains strategies that dominate any evolutionary opponent},
+  author={Press, William H and Dyson, Freeman J},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={109},
+  number={26},
+  pages={10409--10413},
+  year={2012},
+  publisher={National Acad Sciences}
+}
+@article{Harper2017,
+  title={Reinforcement learning produces dominant strategies for the Iterated Prisoner’s Dilemma},
+  author={Harper, Marc and Knight, Vincent and Jones, Martin and Koutsovoulos, Georgios and Glynatsi, Nikoleta E and Campbell, Owen},
+  journal={PloS one},
+  volume={12},
+  number={12},
+  pages={e0188046},
+  year={2017},
+  publisher={Public Library of Science}
+}
 @misc{axelrodproject,
   author       = {{ {The Axelrod project developers} }},
   title        = {Axelrod: 3.0.0},
@@ -6,6 +130,66 @@
   doi          = {<DOI INFORMATION>},
   url          = {http://dx.doi.org/10.5281/zenodo.<DOI NUMBER>}
 }
+@article{Stewart2012,
+  title={Extortion and cooperation in the Prisoner’s Dilemma},
+  author={Stewart, Alexander J and Plotkin, Joshua B},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={109},
+  number={26},
+  pages={10134--10135},
+  year={2012},
+  publisher={National Acad Sciences}
+}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%TOP RANKED%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+@article{Carvalho2013,
+  title={Iterated Prisoner’s Dilemma-An extended analysis},
+  author={Carvalho, A and Rocha, H and Amaral, F and Guimaraes, F},
+  journal={Iterated Prisoner’s Dilemma-An extended analysis},
+  year={2013}
+}
+@inproceedings{Ashlock2006,
+  title={Changes in prisoner's dilemma strategies over evolutionary time with different population sizes},
+  author={Ashlock, Wendy and Ashlock, Daniel},
+  booktitle={2006 IEEE International Conference on Evolutionary Computation},
+  pages={297--304},
+  year={2006},
+  organization={IEEE}
+}
+@inproceedings{Ashlock2014,
+  title={The evolution of exploitation},
+  author={Ashlock, Wendy and Tsang, Jeffrey and Ashlock, Daniel},
+  booktitle={2014 IEEE Symposium on Foundations of Computational Intelligence (FOCI)},
+  pages={135--142},
+  year={2014},
+  organization={IEEE}
+}
+@article{Nachbar1992,
+  title={Evolution in the finitely repeated prisoner's dilemma},
+  author={Nachbar, John H},
+  journal={Journal of Economic Behavior \& Organization},
+  volume={19},
+  number={3},
+  pages={307--326},
+  year={1992},
+  publisher={Elsevier}
+}
+@misc{prison,
+  title = {LIFL (1998) PRISON},
+  howpublished = {\url{http://www.lifl.fr/IPD/ipd.frame.html}},
+  note = {Accessed: 2017-10-23}
+}
+@article{Van2015,
+  title={The importance of mechanisms for the evolution of cooperation},
+  author={Van den Berg, Pieter and Weissing, Franz J},
+  journal={Proceedings of the Royal Society B: Biological Sciences},
+  volume={282},
+  number={1813},
+  pages={20151382},
+  year={2015},
+  publisher={The Royal Society}
+}
+
 
 @article{knight2016,
   title={An open framework for the reproducible study of the iterated prisoner's dilemma},
@@ -62,4 +246,25 @@
   title={New winning strategies for the iterated prisoner's dilemma},
   author={Mathieu, Philippe and Delahaye, Jean-Paul},
   year={2017}
+}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%BEST PRACTICES%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+@article{Aberdour2007,
+  title={Achieving quality in open-source software},
+  author={Aberdour, Mark},
+  journal={IEEE software},
+  volume={24},
+  number={1},
+  pages={58--64},
+  year={2007},
+  publisher={IEEE}
+}
+@article{Benureau2018,
+  title={Re-run, repeat, reproduce, reuse, replicate: transforming code into scientific contributions},
+  author={Benureau, Fabien CY and Rougier, Nicolas P},
+  journal={Frontiers in neuroinformatics},
+  volume={11},
+  pages={69},
+  year={2018},
+  publisher={Frontiers}
 }
