--- a/paper/performance_merged_table.tex
+++ b/paper/performance_merged_table.tex
@@ -1,7 +1,6 @@
 \begin{tabular}{lr}
 \toprule
-{} &  Normalised rank overall \\
-Name                       &                          \\
+Name                       &              $\bar{r}$   \\
 \midrule
 Limited Retaliate 3        &                 0.285714 \\
 Retaliate 3                &                 0.297872 \\
@@ -12,7 +11,7 @@ Retaliate                  &                 0.317073 \\
 BackStabber                &                 0.322034 \\
 DoubleCrosser              &                 0.327188 \\
 Nice Meta Winner           &                 0.350000 \\
-PSO Gambler 2\_2\_2 Noise 05 &                 0.351104 \\
+PSO Gambler 2 2 2 Noise: 0.5 &                 0.351104 \\
 Grudger                    &                 0.352941 \\
 Forgetful Fool Me Once     &                 0.355140 \\
 NMWE Memory One            &                 0.357576 \\
