--- a/paper/performance_noise_table.tex
+++ b/paper/performance_noise_table.tex
@@ -1,22 +1,21 @@
 \begin{tabular}{lr}
 \toprule
-{} &  \$\textbackslash bar\{R\}\$ in noise tournaments \\
-Name                &                                 \\
+Name                &                        $\bar{r}$\\
 \midrule
-Grumpy              &                        0.139535 \\
-\$e\$                 &                        0.190476 \\
-Cooperator          &                        0.195652 \\
-Tit For 2 Tats      &                        0.205196 \\
-Cycle Hunter        &                        0.222222 \\
-Risky QLearner      &                        0.224242 \\
-Retaliate 3         &                        0.230769 \\
-Retaliate 2         &                        0.237624 \\
-Retaliate           &                        0.243094 \\
-Hard Tit For 2 Tats &                        0.246575 \\
-Limited Retaliate 3 &                        0.250000 \\
-ShortMem            &                        0.252720 \\
-Limited Retaliate   &                        0.256983 \\
-Limited Retaliate 2 &                        0.260274 \\
-\$\textbackslash phi\$              &                        0.262008 \\
+Grumpy              &                         0.13953 \\
+$e$                 &                         0.19048 \\
+Cooperator          &                         0.19565 \\
+Tit For 2 Tats      &                         0.20520 \\
+Cycle Hunter        &                         0.22222 \\
+Risky QLearner      &                         0.22424 \\
+Retaliate 3         &                         0.23077 \\
+Retaliate 2         &                         0.23762 \\
+Retaliate           &                         0.24309 \\
+Hard Tit For 2 Tats &                         0.24658 \\
+Limited Retaliate 3 &                         0.25000 \\
+ShortMem            &                         0.25272 \\
+Limited Retaliate   &                         0.25698 \\
+Limited Retaliate 2 &                         0.26027 \\
+$\phi $              &                         0.26201 \\
 \bottomrule
 \end{tabular}
