--- a/paper/performance_probend_table.tex
+++ b/paper/performance_probend_table.tex
@@ -1,22 +1,21 @@
 \begin{tabular}{lr}
 \toprule
-{} &  \$\textbackslash bar\{R\}\$ in probend tournaments \\
-Name              &                                   \\
+Name              &        $\bar{r}$                 \\
 \midrule
-Fortress4         &                          0.012658 \\
-Defector          &                          0.014441 \\
-Better and Better &                          0.015873 \\
-Tricky Defector   &                          0.018692 \\
-Fortress3         &                          0.021978 \\
-Gradual Killer    &                          0.025210 \\
-Aggravater        &                          0.027972 \\
-Raider            &                          0.030769 \\
-Cycler DDC        &                          0.045455 \\
-Hard Prober       &                          0.050847 \\
-SolutionB1        &                          0.060403 \\
-Meta Minority     &                          0.060403 \\
-Bully             &                          0.060606 \\
-Fool Me Forever   &                          0.070175 \\
-EasyGo            &                          0.070652 \\
+Fortress4         &                           0.01266 \\
+Defector          &                           0.01444 \\
+Better and Better &                           0.01587 \\
+Tricky Defector   &                           0.01869 \\
+Fortress3         &                           0.02198 \\
+Gradual Killer    &                           0.02521 \\
+Aggravater        &                           0.02797 \\
+Raider            &                           0.03077 \\
+Cycler DDC        &                           0.04545 \\
+Hard Prober       &                           0.05085 \\
+SolutionB1        &                           0.06040 \\
+Meta Minority     &                           0.06040 \\
+Bully             &                           0.06061 \\
+Fool Me Forever   &                           0.07018 \\
+EasyGo            &                           0.07065 \\
 \bottomrule
 \end{tabular}
