--- a/paper/performance_standard_table.tex
+++ b/paper/performance_standard_table.tex
@@ -1,22 +1,21 @@
 \begin{tabular}{lr}
 \toprule
-{} &  $\bar{R}$ in standard tournaments \\
-Name                    &                                    \\
+Name                    &   $\bar{r}$                        \\
 \midrule
-Evolved HMM 5           &                           0.006579 \\
-Evolved FSM 16          &                           0.009901 \\
-EvolvedLookerUp2\_2\_2    &                           0.010638 \\
-Evolved FSM 16 Noise 05 &                           0.016393 \\
-PSO Gambler 2\_2\_2       &                           0.021390 \\
-Evolved ANN             &                           0.028736 \\
-Evolved ANN 5           &                           0.033898 \\
-PSO Gambler 1\_1\_1       &                           0.037234 \\
-Evolved FSM 4           &                           0.048387 \\
-PSO Gambler Mem1        &                           0.050000 \\
-Winner12                &                           0.059459 \\
-Fool Me Once            &                           0.061224 \\
-DBS                     &                           0.070866 \\
-DoubleCrosser           &                           0.071895 \\
-BackStabber             &                           0.075000 \\
+Evolved HMM 5           &                            0.00658 \\
+Evolved FSM 16          &                            0.00990 \\
+EvolvedLookerUp2 2 2    &                            0.01064 \\
+Evolved FSM 16 Noise 05 &                            0.01639 \\
+PSO Gambler 2 2 2       &                            0.02139 \\
+Evolved ANN             &                            0.02874 \\
+Evolved ANN 5           &                            0.03390 \\
+PSO Gambler 1 1 1       &                            0.03723 \\
+Evolved FSM 4           &                            0.04839 \\
+PSO Gambler Mem1        &                            0.05000 \\
+Winner12                &                            0.05946 \\
+Fool Me Once            &                            0.06122 \\
+DBS                     &                            0.07087 \\
+DoubleCrosser           &                            0.07190 \\
+BackStabber             &                            0.07500 \\
 \bottomrule
 \end{tabular}
