--- a/paper/performance_probend_noise_table.tex
+++ b/paper/performance_probend_noise_table.tex
@@ -1,22 +1,21 @@
 \begin{tabular}{lr}
 \toprule
-{} &  \$\textbackslash bar\{R\}\$ in probend\_noise tournaments \\
-Name                &                                         \\
+Name                &                         $\bar{r}$    \\
 \midrule
-Alternator          &                                0.303899 \\
-\$\textbackslash phi\$              &                                0.310253 \\
-\$e\$                 &                                0.312925 \\
-\$\textbackslash pi\$               &                                0.318182 \\
-Limited Retaliate   &                                0.352941 \\
-Anti Tit For Tat    &                                0.354286 \\
-Retaliate 3         &                                0.354839 \\
-Limited Retaliate 3 &                                0.355630 \\
-Retaliate           &                                0.355880 \\
-Retaliate 2         &                                0.357143 \\
-Limited Retaliate 2 &                                0.360656 \\
-Hopeless            &                                0.369128 \\
-Arrogant QLearner   &                                0.405263 \\
-Cautious QLearner   &                                0.407111 \\
-Risky QLearner      &                                0.419890 \\
+Alternator          &                                 0.30390 \\
+$\phi$              &                                 0.31025 \\
+$e$                 &                                 0.31293 \\
+$\pi$               &                                 0.31818 \\
+Limited Retaliate   &                                 0.35294 \\
+Anti Tit For Tat    &                                 0.35429 \\
+Retaliate 3         &                                 0.35484 \\
+Limited Retaliate 3 &                                 0.35563 \\
+Retaliate           &                                 0.35588 \\
+Retaliate 2         &                                 0.35714 \\
+Limited Retaliate 2 &                                 0.36066 \\
+Hopeless            &                                 0.36913 \\
+Arrogant QLearner   &                                 0.40526 \\
+Cautious QLearner   &                                 0.40711 \\
+Risky QLearner      &                                 0.41989 \\
 \bottomrule
 \end{tabular}
