draft of first sections and will re-write evaluation section

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -189,6 +189,41 @@ url="https://doi.org/10.1007/978-3-642-95874-8_9"
   year={2015},
   publisher={The Royal Society}
 }
+@article{Knight2019,
+  author    = {Vincent A. Knight and
+               Marc Harper and
+               Nikoleta E. Glynatsi and
+               Jonathan Gillard},
+  title     = {Recognising and evaluating the effectiveness of extortion in the Iterated
+               Prisoner's Dilemma},
+  journal   = {CoRR},
+  volume    = {abs/1904.00973},
+  year      = {2019},
+  url       = {http://arxiv.org/abs/1904.00973},
+  archivePrefix = {arXiv},
+  eprint    = {1904.00973},
+  timestamp = {Wed, 24 Apr 2019 12:21:25 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1904-00973},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%TEXTBOOKS%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+@inproceedings{Arthur2007,
+  title={k-means++: The advantages of careful seeding},
+  author={Arthur, David and Vassilvitskii, Sergei},
+  booktitle={Proceedings of the eighteenth annual ACM-SIAM symposium on Discrete algorithms},
+  pages={1027--1035},
+  year={2007},
+  organization={Society for Industrial and Applied Mathematics}
+}
+@article{Rousseeuw1987,
+  title={Silhouettes: a graphical aid to the interpretation and validation of cluster analysis},
+  author={Rousseeuw, Peter J},
+  journal={Journal of computational and applied mathematics},
+  volume={20},
+  pages={53--65},
+  year={1987},
+  publisher={Elsevier}
+}
 
 
 @article{knight2016,
@@ -267,4 +302,35 @@ url="https://doi.org/10.1007/978-3-642-95874-8_9"
   pages={69},
   year={2018},
   publisher={Frontiers}
+}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%TEAMS%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+@article{J.P.Delahaye1993Lp,
+journal = {Pour la Science (French Edition of Scientific American)},
+pages = {102--107},
+volume = {187},
+year = {1993},
+title = {L'altruisme perfectionné},
+author = {J.P. Delahaye},
+}
+
+@misc{J.P.Delahaye1995LIeP,
+year = {1995},
+title = {Logique, Informatique et Paradoxes},
+author = {J.P. Delahaye},
+}
+
+@article{A.Rogers2007Ctpw,
+issn = {0304-3975},
+journal = {Theoretical computer science.},
+pages = {243--259},
+volume = {377},
+publisher = {North-Holland Pub Co},
+number = {1-3},
+year = {2007},
+title = {Coordinating team players within a noisy Iterated Prisoner’s Dilemma
+tournament},
+address = {Amsterdam :},
+author = {A. Rogers and Rogers, A and Dash, RK and Ramchurn, SD and Vytelingum,
+P and Jennings, NR},
 }
