--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -71,7 +71,6 @@ pages={115–116}
 }
 @book{Donninger1986,
 author="C. Donninger",
-editor="A. Diekmann and P. Mitter",
 title="Is it Always Efficient to be Nice? A Computer Simulation of Axelrod's Computer Tournament",
 bookTitle="Paradoxical Effects of Social Behavior: Essays in Honor of Anatol Rapoport",
 year="1986",
@@ -224,7 +223,26 @@ url="https://doi.org/10.1007/978-3-642-95874-8_9"
   year={1987},
   publisher={Elsevier}
 }
-
+@article{breiman2001,
+  title={Random forests},
+  author={Breiman, Leo},
+  journal={Machine learning},
+  volume={45},
+  number={1},
+  pages={5--32},
+  year={2001},
+  publisher={Springer}
+}
+@article{hastie2005,
+  title={The elements of statistical learning: data mining, inference and prediction},
+  author={Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome and Franklin, James},
+  journal={The Mathematical Intelligencer},
+  volume={27},
+  number={2},
+  pages={83--85},
+  year={2005},
+  publisher={Springer}
+}
 
 @article{knight2016,
   title={An open framework for the reproducible study of the iterated prisoner's dilemma},
@@ -236,21 +254,6 @@ url="https://doi.org/10.1007/978-3-642-95874-8_9"
   number={1},
   year={2016},
   publisher={Ubiquity Press}
-}
-
-@article{Harper2017,
-  author = {Harper, Marc AND Knight, Vincent AND Jones, Martin AND Koutsovoulos,
-   Georgios AND Glynatsi, Nikoleta E. AND Campbell, Owen},
-  journal = {PLOS ONE},
-  publisher = {Public Library of Science},
-  title = {Reinforcement learning produces dominant strategies for the Iterated Prisoner’s Dilemma},
-  year = {2017},
-  month = {12},
-  volume = {12},
-  url = {https://doi.org/10.1371/journal.pone.0188046},
-  pages = {1-33},
-  number = {12},
-  doi = {10.1371/journal.pone.0188046}
 }
 
 @article{mathieu2017,
@@ -275,12 +278,6 @@ url="https://doi.org/10.1007/978-3-642-95874-8_9"
   pages={561--568},
   year={2006},
   organization={ACM}
-}
-
-@article{Mathieu2017,
-  title={New winning strategies for the iterated prisoner's dilemma},
-  author={Mathieu, Philippe and Delahaye, Jean-Paul},
-  year={2017}
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%BEST PRACTICES%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -333,4 +330,272 @@ tournament},
 address = {Amsterdam :},
 author = {A. Rogers and Rogers, A and Dash, RK and Ramchurn, SD and Vytelingum,
 P and Jennings, NR},
+}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%ARCHETYPES%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+@article{Axelrod1987,
+author = "R. Axelrod",
+title = {The Evolution of Strategies in the Iterated Prisoner's Dilemma},
+journal = "Genetic Algorithms and Simulated Annealing",
+ISSN = "",
+publisher = "Morgan Kaufmann Publishers",
+year = "1987",
+month = "",
+volume = "",
+number = "",
+pages = "32-41",
+URL = "http://ci.nii.ac.jp/naid/10000082922/en/",
+DOI = "",
+}
+@article{Miller1996,
+title = {The coevolution of automata in the repeated Prisoner's Dilemma},
+journal = "Journal of Economic Behavior and Organization",
+volume = "29",
+number = "1",
+pages = "87 - 112",
+year = "1996",
+issn = "0167-2681",
+doi = "https://doi.org/10.1016/0167-2681(95)00052-6",
+url = "http://www.sciencedirect.com/science/article/pii/0167268195000526",
+author = "J. H. Miller"
+}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+@article{Li2011,
+    author = {Li, Jiawei and Hingston, Philip and Member, Senior and Kendall,
+              Graham},
+    number = {4},
+    pages = {348--360},
+    title = {{Engineering Design of Strategies for Winning Iterated Prisoner ' s
+             Dilemma Competitions}},
+    volume = {3},
+    year = {2011}
+}
+@book{kendall2007iterated,
+  title={The iterated prisoners' dilemma: 20 years on},
+  author={Kendall, Graham and Yao, Xin and Chong, Siang Yew},
+  volume={4},
+  year={2007},
+  publisher={World Scientific}
+}
+@article{Tzafestas2000,
+	author = {Tzafestas, E},
+	journal = {From Animals to animals: Proceedings of the 6th International Conference on the Simulation of Adaptive Behavior {(SAB-2000)}},
+	pages = {334--340},
+	title = {{Toward adaptive cooperative behavior}},
+	volume = {2},
+	year = {2000}
+}
+@article{Mittal2009,
+	author = {Mittal, Shashi and Deb, Kalyanmoy},
+	doi = {10.1109/TEVC.2008.2009459},
+	isbn = {1424404649},
+	issn = {1089778X},
+	journal = {IEEE Transactions on Evolutionary Computation},
+	keywords = {Evolutionary algorithms,Games,Multiobjective optimization,Prisoner's dilemma},
+	number = {3},
+	pages = {554--565},
+	title = {{Optimal strategies of the iterated prisoner's dilemma problem for multiple conflicting objectives}},
+	volume = {13},
+	year = {2009}
+}
+@article{Hilbe2013,
+  title={Adaptive dynamics of extortion and compliance},
+  author={Hilbe, Christian and Nowak, Martin A and Traulsen, Arne},
+  journal={PloS one},
+  volume={8},
+  number={11},
+  pages={e77886},
+  year={2013},
+  publisher={Public Library of Science}
+}
+@article{Li2009,
+    doi = {10.1162/evco.2009.17.2.257},
+    isbn = {1063-6560},
+    issn = {1063-6560},
+    journal = {Evolutionary Computation},
+    keywords = {Biological Evolution,Computer Simulation,Game
+                Theory,Genetic,Models,Statistical},
+    number = {2},
+    pages = {257--274},
+    pmid = {19413490},
+    title = {{A strategy with novel evolutionary features for the iterated
+             prisoner's dilemma.}},
+    howpublished = {http://www.ncbi.nlm.nih.gov/pubmed/19413490},
+    volume = {17},
+    year = {2009}
+}
+@article{Axelrod1995,
+  title={How to cope with noise in the iterated prisoner's dilemma},
+  author={Wu, Jianzhong and Axelrod, Robert},
+  journal={Journal of Conflict resolution},
+  volume={39},
+  number={1},
+  pages={183--189},
+  year={1995},
+  publisher={Sage Periodicals Press 2455 Teller Road, Thousand Oaks, CA 91320}
+}
+@article{Frean1994,
+  title={The prisoner's dilemma without synchrony},
+  author={Frean, Marcus R},
+  journal={Proceedings of the Royal Society of London B: Biological Sciences},
+  volume={257},
+  number={1348},
+  pages={75--79},
+  year={1994},
+  publisher={The Royal Society}
+}
+@misc{PD2017,
+  author       = {Unknown},
+  title        = {www.prisoners-dilemma.com},
+  year         = 2017,
+  howpublished          = {http://www.prisoners-dilemma.com/}
+}
+@InCollection{Kuhn2017,
+	author       =	{Kuhn, Steven},
+	title        =	{Prisoner's Dilemma},
+	booktitle    =	{The Stanford Encyclopedia of Philosophy},
+	editor       =	{Edward N. Zalta},
+	howpublished =	{\url{https://plato.stanford.edu/archives/spr2017/entries/prisoner-dilemma/}},
+	year         =	{2017},
+	edition      =	{Spring 2017},
+	publisher    =	{Metaphysics Research Lab, Stanford University}
+}
+@inproceedings{Beaufils1997,
+  title={Our meeting with gradual, a good strategy for the iterated prisoner’s dilemma},
+  author={Beaufils, Bruno and Delahaye, Jean-Paul and Mathieu, Philippe},
+  booktitle={Proceedings of the Fifth International Workshop on the Synthesis and Simulation of Living Systems},
+  pages={202--209},
+  year={1997}
+}
+@misc{Eckhart2015,
+  author       = {Eckhart Arnold},
+  title        = { CoopSim v0.9.9 beta 6},
+  year         = 2015,
+  howpublished = {https://github.com/jecki/CoopSim/}
+}
+@article{Robson1990,
+  title={Efficiency in evolutionary games: Darwin, Nash and the secret handshake},
+  author={Robson, Arthur J},
+  journal={Journal of theoretical Biology},
+  volume={144},
+  number={3},
+  pages={379--396},
+  year={1990},
+  publisher={Elsevier}
+}
+
+@article{Banks1990,
+  title={Repeated games, finite automata, and complexity},
+  author={Banks, Jeffrey S and Sundaram, Rangarajan K},
+  journal={Games and Economic Behavior},
+  volume={2},
+  number={2},
+  pages={97--117},
+  year={1990},
+  publisher={Elsevier}
+}
+@article{Adami2013,
+	archivePrefix = {arXiv},
+	arxivId = {arXiv:1208.2666v4},
+	author = {Adami, Christoph and Hintze, Arend},
+	doi = {10.1038/ncomms3193},
+	eprint = {arXiv:1208.2666v4},
+	isbn = {2041-1723 (Electronic)$\backslash$r2041-1723 (Linking)},
+	issn = {2041-1723},
+	journal = {Nature communications},
+	keywords = {Biological Evolution,Computer Simulation,Game Theory,Humans,Memory,Mutation,Mutation: genetics,Probability},
+	number = {1},
+	pages = {2193},
+	pmid = {23903782},
+	publisher = {Nature Publishing Group},
+	title = {{Evolutionary instability of zero-determinant strategies demonstrates that winning is not everything.}},
+	howpublished = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=3741637{\&}tool=pmcentrez{\&}rendertype=abstract},
+	volume = {4},
+	year = {2013}
+}
+@article{Kraines1989,
+  title={Pavlov and the prisoner's dilemma},
+  author={Kraines, David and Kraines, Vivian},
+  journal={Theory and decision},
+  volume={26},
+  number={1},
+  pages={47--79},
+  year={1989},
+  publisher={Springer}
+}
+@article{Gaudesi2016,
+  title={Exploiting evolutionary modeling to prevail in iterated prisoner’s dilemma tournaments},
+  author={Gaudesi, Marco and Piccolo, Elio and Squillero, Giovanni and Tonda, Alberto},
+  journal={IEEE Transactions on Computational Intelligence and AI in Games},
+  volume={8},
+  number={3},
+  pages={288--300},
+  year={2016},
+  publisher={IEEE}
+}
+@article{Li2014,
+	author = {Li, Jiawei and Kendall, Graham and Member, Senior},
+	number = {X},
+	pages = {1--8},
+	title = {{The effect of memory size on the evolutionary stability of strategies in iterated prisoner ' s dilemma}},
+	volume = {X},
+	year = {2014}
+}
+@article{Ashlock2008,
+  title={Fingerprinting: Visualization and automatic analysis of prisoner's dilemma strategies},
+  author={Ashlock, Daniel and Kim, Eun-Youn},
+  journal={IEEE Transactions on Evolutionary Computation},
+  volume={12},
+  number={5},
+  pages={647--659},
+  year={2008},
+  publisher={IEEE}
+}
+@article{Andre2013,
+  year={2013},
+  title={Iterated Prisoner’s Dilemma-An extended analysis},
+  author={Carvalho, Andre LC and Rocha, Honovan P and Amaral, Felipe T and Guimaraes, Frederico G}
+}
+@article{Ashlock2015,
+  title={Multiple Opponent Optimization of Prisoner’s Dilemma Playing Agents},
+  author={Ashlock, Daniel and Brown, Joseph Alexander and Hingston, Philip},
+  journal={IEEE Transactions on Computational Intelligence and AI in Games},
+  volume={7},
+  number={1},
+  pages={53--65},
+  year={2015},
+  publisher={IEEE}
+}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+@article{scikit-learn,
+ title={Scikit-learn: Machine Learning in {P}ython},
+ author={Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V.
+         and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P.
+         and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and
+         Cournapeau, D. and Brucher, M. and Perrot, M. and Duchesnay, E.},
+ journal={Journal of Machine Learning Research},
+ volume={12},
+ pages={2825--2830},
+ year={2011}
+}
+@article{hunter2007matplotlib,
+  title = {{Matplotlib: A 2D graphics environment}},
+  author = {Hunter, J. D.},
+  journal = {Computing In Science \& Engineering},
+  volume = {9},
+  number = {3},
+  pages = {90--95},
+  year = {2007},
+  publisher = {IEEE}
+}
+@article{walt2011numpy,
+  title = {{The NumPy array: a structure for efficient numerical computation}},
+  author = {Walt, S. and Colbert, S. C. and Varoquaux, G.},
+  journal = {Computing in Science \& Engineering},
+  volume = {13},
+  number = {2},
+  pages = {22--30},
+  year = {2011},
+  publisher = {IEEE}
 }
