draft people hanging it to Vince

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -1,4 +1,17 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%LITERATURE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+@article{Flood1958,
+author = {M. M. Flood},
+title = {Some Experimental Games},
+journal = {Management Science},
+volume = {5},
+number = {1},
+pages = {5-26},
+year = {1958},
+doi = {10.1287/mnsc.5.1.5},
+URL = { https://doi.org/10.1287/mnsc.5.1.5},
+eprint = {https://doi.org/10.1287/mnsc.5.1.5}
+}
+
 @article{Axelrod1980a,
 author = {Robert Axelrod},
 title ={Effective Choice in the Prisoner's Dilemma},
@@ -68,6 +81,23 @@ pages={115–116}
  title = {When in Doubt... Cooperation in a Noisy Prisoner's Dilemma},
  volume = {35},
  year = {1991}
+}
+@article{Stephens2002,
+  title={Discounting and reciprocity in an iterated prisoner's dilemma},
+  author={Stephens, David W and McLinn, Colleen M and Stevens, Jeffery R},
+  journal={Science},
+  volume={298},
+  number={5601},
+  pages={2216--2218},
+  year={2002},
+  publisher={American Association for the Advancement of Science}
+}
+@book{Kendall2007,
+  title={The iterated prisoners' dilemma: 20 years on},
+  author={Kendall, Graham and Yao, Xin and Chong, Siang Yew},
+  volume={4},
+  year={2007},
+  publisher={World Scientific}
 }
 @book{Donninger1986,
 author="C. Donninger",
@@ -140,6 +170,22 @@ url="https://doi.org/10.1007/978-3-642-95874-8_9"
   publisher={National Acad Sciences}
 }
 
+@misc{us_blog,
+  title = {A New Way Out of the Prisoner's Dilemma: Cheat},
+  author = {C. Crick},
+  journal = {IEEE Spectrum},
+  type = {Blog},
+  howpublished = {\url{https://spectrum.ieee.org/computing/software/a-new-way-out-of-the-prisoners-dilemma-cheat}},
+}
+@misc{lesswrong,
+  title = {Prisoner's Dilemma Tournament Results},
+  journal = {LessWrong},
+  year = 2011,
+  type = {Blog},
+  howpublished = {\url{https://www.lesswrong.com/posts/hamma4XgeNrsvAJv5/prisoner-s-dilemma-tournament-results}},
+}
+
+https://www.lesswrong.com/posts/hamma4XgeNrsvAJv5/prisoner-s-dilemma-tournament-results
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%TOP RANKED%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 @article{Carvalho2013,
   title={Iterated Prisoner’s Dilemma-An extended analysis},
@@ -598,4 +644,16 @@ author = "J. H. Miller"
   pages = {22--30},
   year = {2011},
   publisher = {IEEE}
+}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%DATA%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+@misc{data,
+  author       = {Nikoleta E. Glynatsi},
+  title        = {{A data set of 45686 Iterated Prisoner's Dilemma 
+                   tournaments' results}},
+  month        = oct,
+  year         = 2019,
+  publisher    = {Zenodo},
+  version      = {0.0.1},
+  doi          = {10.5281/zenodo.3516652},
+  url          = {https://doi.org/10.5281/zenodo.3516652}
 }
