--- a/paper/list_of_strategies.tex
+++ b/paper/list_of_strategies.tex
@@ -7,6 +7,7 @@
 \item Adaptive Pavlov 2011~\cite{Li2011}
 \item Adaptive Tit For Tat: 0.5~\cite{Tzafestas2000}
 \item Aggravater~\cite{axelrodproject}
+\item Alexei~\cite{lesswrong}
 \item Alternator~\cite{Axelrod1981, Mittal2009}
 \item Alternator Hunter~\cite{axelrodproject}
 \item Anti Tit For Tat~\cite{Hilbe2013}
@@ -14,10 +15,12 @@
 \item Appeaser~\cite{axelrodproject}
 \item Arrogant QLearner~\cite{axelrodproject}
 \item Average Copier~\cite{axelrodproject}
+\item Backstabber~\cite{axelrodproject}
 \item Better and Better~\cite{prison}
 \item Bully~\cite{Nachbar1992}
 \item Calculator~\cite{prison}
 \item Cautious QLearner~\cite{axelrodproject}
+\item Champion~\cite{Axelrod1980b}
 \item CollectiveStrategy~\cite{Li2009}
 \item Contrite Tit For Tat~\cite{Axelrod1995}
 \item Cooperator~\cite{Axelrod1981, Mittal2009, Press2012}
@@ -29,10 +32,11 @@
 \item Cycler CCD~\cite{Mittal2009}
 \item Cycler DC~\cite{axelrodproject}
 \item Cycler DDC~\cite{Mittal2009}
-\item DBS: 0.75, 3, 4, 3, 5~\cite{Au2006}
-\item Davis: 10~\cite{Axelrod1980a}
+\item DBS~\cite{Au2006}
+\item Davis~\cite{Axelrod1980a}
 \item Defector~\cite{Axelrod1981, Mittal2009, Press2012}
 \item Defector Hunter~\cite{axelrodproject}
+\item Double Crosser~\cite{axelrodproject}
 \item Desperate \cite{Van2015}
 \item DoubleResurrection~\cite{Eckhart2015}
 \item Doubler~\cite{prison}
@@ -47,30 +51,27 @@
 \item Evolved FSM 16 Noise 05~\cite{axelrodproject}
 \item Evolved FSM 4~\cite{axelrodproject}
 \item Evolved HMM 5~\cite{axelrodproject}
-\item EvolvedLookerUp1\_1\_1~\cite{axelrodproject}
-\item EvolvedLookerUp2\_2\_2~\cite{axelrodproject}
-\item Feld: 1.0, 0.5, 200~\cite{Axelrod1980a}
-\item Firm But Fair \cite{Frean1994}
+\item EvolvedLookerUp1 1 1~\cite{axelrodproject}
+\item EvolvedLookerUp2 2 2~\cite{axelrodproject}
+\item Eugine Nier~\cite{lesswrong}
+\item Feld~\cite{Axelrod1980a}
+\item Firm But Fair~\cite{Frean1994}
 \item Fool Me Forever~\cite{axelrodproject}
 \item Fool Me Once~\cite{axelrodproject}
-\item Forgetful Fool Me Once: 0.05\cite{axelrodproject}
+\item Forgetful Fool Me Once~\cite{axelrodproject}
 \item Forgetful Grudger~\cite{axelrodproject}
 \item Forgiver~\cite{axelrodproject}
-\item Forgiving Tit For Tat (\textbf{FTfT})~\cite{axelrodproject}
+\item Forgiving Tit For Tat~\cite{axelrodproject}
 \item Fortress3~\cite{Ashlock2006}
 \item Fortress4~\cite{Ashlock2006}
-\item GTFT: 0.1 -
-\item GTFT: 0.3 -
-\item GTFT: 0.33 \cite{Gaudesi2016, Nowak1993}
-\item GTFT: 0.7 -
-\item GTFT: 0.9 -
-\item General Soft Grudger: n=1,d=4,c=2~\cite{axelrodproject}
+\item GTFT \cite{Gaudesi2016, Nowak1993}
+\item General Soft Grudger~\cite{axelrodproject}
 \item Gradual~\cite{Beaufils1997}
-\item Gradual Killer: ('D', 'D', 'D', 'D', 'D', 'C', 'C')~\cite{prison}
+\item Gradual Killer~\cite{prison}
 \item Grofman\cite{Axelrod1980a}
 \item Grudger~\cite{Axelrod1980a, Banks1990, Beaufils1997, Van2015, Li2011}
 \item GrudgerAlternator~\cite{prison}
-\item Grumpy: Nice, 10, -10~\cite{axelrodproject}
+\item Grumpy~\cite{axelrodproject}
 \item Handshake~\cite{Robson1990}
 \item Hard Go By Majority~\cite{Mittal2009}
 \item Hard Go By Majority: 10~\cite{axelrodproject}
@@ -78,32 +79,52 @@
 \item Hard Go By Majority: 40~\cite{axelrodproject}
 \item Hard Go By Majority: 5~\cite{axelrodproject}
 \item Hard Prober~\cite{prison}
-\item Hard Tit For 2 Tats (\textbf{HTf2T})~\cite{Stewart2012}
-\item Hard Tit For Tat (\textbf{HTfT})~\cite{PD2017}
+\item Hard Tit For 2 Tats~\cite{Stewart2012}
+\item Hard Tit For Tat~\cite{PD2017}
 \item Hesitant QLearner\cite{axelrodproject}
-\item Hopeless \cite{Van2015}
-\item Inverse\cite{axelrodproject}
+\item Hopeless~\cite{Van2015}
+\item Inverse~\cite{axelrodproject}
 \item Inverse Punisher~\cite{axelrodproject}
-\item Joss: 0.9 \cite{Axelrod1980a, Stewart2012}
+\item Joss~\cite{Axelrod1980a, Stewart2012}
+\item Knowledgeable Worse and Worse~\cite{axelrodproject}
 \item Level Punisher~\cite{Eckhart2015}
-\item Limited Retaliate 2: 0.08, 15~\cite{axelrodproject}
-\item Limited Retaliate 3: 0.05, 20~\cite{axelrodproject}
-\item Limited Retaliate: 0.1, 20~\cite{axelrodproject}
+\item Limited Retaliate 2~\cite{axelrodproject}
+\item Limited Retaliate 3~\cite{axelrodproject}
+\item Limited Retaliate~\cite{axelrodproject}
 \item MEM2~\cite{Li2014}
 \item Math Constant Hunter~\cite{axelrodproject}
-\item Meta Hunter Aggressive: 7 players~\cite{axelrodproject}
-\item Meta Hunter: 6 players~\cite{axelrodproject}
-\item Meta Mixer: 173 players\cite{axelrodproject}
-\item Naive Prober: 0.1 \cite{Li2011}
-\item Negation \cite{PD2017}
-\item Nice Average Copier\cite{axelrodproject}
+\item Meta Hunter Aggressive~\cite{axelrodproject}
+\item Meta Hunter~\cite{axelrodproject}
+\item Meta Majority~\cite{axelrodproject}
+\item Meta Majority Finite Memory~\cite{axelrodproject}
+\item Meta Majority Long Memory~\cite{axelrodproject}
+\item Meta Majority Memory One~\cite{axelrodproject}
+\item Meta Minority~\cite{axelrodproject}
+\item Meta Mixer~\cite{axelrodproject}
+\item Meta Winner~\cite{axelrodproject}
+\item Meta Winner Deterministic~\cite{axelrodproject}
+\item Meta Winner Ensemble~\cite{axelrodproject}
+\item Meta Winner Finite Memory~\cite{axelrodproject}
+\item Meta Winner Long Memory~\cite{axelrodproject}
+\item Meta Winner Memory One~\cite{axelrodproject}
+\item Meta Winner Stochastic~\cite{axelrodproject}
+\item NMWE Deterministic~\cite{axelrodproject}
+\item NMWE Finite Memory~\cite{axelrodproject}
+\item NMWE Long Memory~\cite{axelrodproject}
+\item NMWE Memory One~\cite{axelrodproject}
+\item NMWE Stochastic~\cite{axelrodproject}
+\item Naive Prober~\cite{Li2011}
+\item Negation~\cite{PD2017}
+\item Nice Average Copier~\cite{axelrodproject}
+\item Nice Meta Winner~\cite{axelrodproject}
+\item Nice Meta Winner Ensemble~\cite{axelrodproject}
 \item Nydegger~\cite{Axelrod1980a}
-\item Omega TFT: 3, 8~\cite{kendall2007iterated}
+\item Omega TFT~\cite{kendall2007iterated}
 \item Once Bitten~\cite{axelrodproject}
 \item Opposite Grudger~\cite{axelrodproject}
-\item PSO Gambler 1\_1\_1\cite{axelrodproject}
-\item PSO Gambler 2\_2\_2\cite{axelrodproject}
-\item PSO Gambler 2\_2\_2 Noise 05\cite{axelrodproject}
+\item PSO Gambler 1 1 1~\cite{axelrodproject}
+\item PSO Gambler 2 2 2~\cite{axelrodproject}
+\item PSO Gambler 2 2 2 Noise 05~\cite{axelrodproject}
 \item PSO Gambler Mem1 \cite{axelrodproject}
 \item Predator~\cite{Ashlock2006}
 \item Prober~\cite{Li2011}
@@ -114,37 +135,34 @@
 \item Punisher~\cite{axelrodproject}
 \item Raider~\cite{Ashlock2014}
 \item Random Hunter~\cite{axelrodproject}
-\item Random: 0.1 
-\item Random: 0.3 
 \item Random: 0.5~\cite{Axelrod1980a, Tzafestas2000}
-\item Random: 0.7 
-\item Random: 0.9 
-\item Remorseful Prober: 0.1 ~ \cite{Li2011}
+\item Remorseful Prober~\cite{Li2011}
 \item Resurrection~\cite{Eckhart2015}
-\item Retaliate 2: 0.08~\cite{axelrodproject}
-\item Retaliate 3: 0.05~\cite{axelrodproject}
-\item Retaliate: 0.1~\cite{axelrodproject}
-\item Revised Downing: True~\cite{Axelrod1980a}
+\item Retaliate 2~\cite{axelrodproject}
+\item Retaliate 3~\cite{axelrodproject}
+\item Retaliate~\cite{axelrodproject}
+\item Revised Downing~\cite{Axelrod1980a}
 \item Ripoff~\cite{Ashlock2008}
-\item Risky QLearner\cite{axelrodproject}
+\item Risky QLearner~\cite{axelrodproject}
 \item SelfSteem~\cite{Andre2013}
 \item ShortMem ~\cite{Andre2013}
 \item Shubik~\cite{Axelrod1980a}
-\item Slow Tit For Two Tats~\cite{axelrodproject}
 \item Slow Tit For Two Tats 2~\cite{prison}
 \item Sneaky Tit For Tat~\cite{axelrodproject}
 \item Soft Go By Majority~\cite{Axelrod1981, Mittal2009}
-\item Soft Go By Majority: 10~\cite{axelrodproject}
-\item Soft Go By Majority: 20~\cite{axelrodproject}
-\item Soft Go By Majority: 40~\cite{axelrodproject}
-\item Soft Go By Majority: 5~\cite{axelrodproject}
-\item Soft Grudger \cite{Li2011}
-\item Soft Joss: 0.9 \cite{prison}
+\item Soft Go By Majority 10~\cite{axelrodproject}
+\item Soft Go By Majority 20~\cite{axelrodproject}
+\item Soft Go By Majority 40~\cite{axelrodproject}
+\item Soft Go By Majority 5~\cite{axelrodproject}
+\item Soft Grudger~\cite{Li2011}
+\item Soft Joss~\cite{prison}
 \item SolutionB1~\cite{Ashlock2015}
 \item SolutionB5~\cite{Ashlock2015}
 \item Spiteful Tit For Tat~\cite{prison}
-\item Stochastic Cooperator \cite{Adami2013}
-\item Stochastic WSLS: 0.05 \cite{axelrodproject}
+\item Stalker~\cite{Carvalho2013}
+\item Stein and Rapoport~\cite{Axelrod1980a}
+\item Stochastic Cooperator~\cite{Adami2013}
+\item Stochastic WSLS~\cite{axelrodproject}
 \item Suspicious Tit For Tat~\cite{Beaufils1997, Hilbe2013}
 \item TF1~\cite{axelrodproject}
 \item TF2~\cite{axelrodproject}
@@ -157,20 +175,20 @@
 \item Tit For Tat (\textbf{TfT})~\cite{Axelrod1980a}
 \item Tricky Cooperator~\cite{axelrodproject}
 \item Tricky Defector~\cite{axelrodproject}
-\item Tullock: 11~\cite{Axelrod1980a}
+\item Tullock~\cite{Axelrod1980a}
 \item Two Tits For Tat (\textbf{2TfT})~\cite{Axelrod1981}
 \item VeryBad~\cite{Andre2013}
 \item Willing \cite{Van2015}
-\item Win-Shift Lose-Stay: D (\textbf{WShLSt})~\cite{Li2011}
-\item Win-Stay Lose-Shift: C (\textbf{WSLS})~\cite{Kraines1989, Nowak1993, Stewart2012}
+\item Win-Shift Lose-Stay (\textbf{WShLSt})~\cite{Li2011}
+\item Win-Stay Lose-Shift (\textbf{WSLS})~\cite{Kraines1989, Nowak1993, Stewart2012}
 \item Winner12~\cite{mathieu2017}
 \item Winner21~\cite{mathieu2017}
 \item Worse and Worse\cite{prison}
 \item Worse and Worse 2\cite{prison}
 \item Worse and Worse 3\cite{prison}
-\item ZD-Extort-2 v2: 0.125, 0.5, 1 \cite{Kuhn2017}
-\item ZD-Extort-2: 0.1111111111111111, 0.5 \cite{Stewart2012}
-\item ZD-Extort-4: 0.23529411764705882, 0.25, 1 \cite{axelrodproject}
-\item ZD-GEN-2: 0.125, 0.5, 3 \cite{Kuhn2017}
-\item ZD-GTFT-2: 0.25, 0.5 \cite{Stewart2012}
-\item ZD-SET-2: 0.25, 0.0, 2 \cite{Kuhn2017}
+\item ZD-Extort-2 v2~\cite{Kuhn2017}
+\item ZD-Extort-2~\cite{Stewart2012}
+\item ZD-Extort-4~\cite{axelrodproject}
+\item ZD-GEN-2~\cite{Kuhn2017}
+\item ZD-GTFT-2~\cite{Stewart2012}
+\item ZD-SET-2~\cite{Kuhn2017}
