--- a/paper/performance_merged_table.tex
+++ b/paper/performance_merged_table.tex
@@ -1,21 +1,22 @@
 \begin{tabular}{lr}
 \toprule
-Name                       &              $\bar{r}$   \\
+{} &  Normalized\_Rank \\
+Name                       &                  \\
 \midrule
-Limited Retaliate 3        &                 0.285714 \\
-Retaliate 3                &                 0.297872 \\
-Limited Retaliate 2        &                 0.301370 \\
-Retaliate 2                &                 0.304348 \\
-Limited Retaliate          &                 0.309629 \\
-Retaliate                  &                 0.317073 \\
-BackStabber                &                 0.322034 \\
-DoubleCrosser              &                 0.327188 \\
-Nice Meta Winner           &                 0.350000 \\
-PSO Gambler 2 2 2 Noise: 0.5 &                 0.351104 \\
-Grudger                    &                 0.352941 \\
-Forgetful Fool Me Once     &                 0.355140 \\
-NMWE Memory One            &                 0.357576 \\
-Evolved HMM 5              &                 0.358333 \\
-Stein and Rapoport         &                 0.359375 \\
+Limited Retaliate 3        &          0.28609 \\
+Retaliate 3                &          0.29630 \\
+Retaliate 2                &          0.30250 \\
+Limited Retaliate 2        &          0.30328 \\
+Limited Retaliate          &          0.31000 \\
+Retaliate                  &          0.31707 \\
+BackStabber                &          0.32381 \\
+DoubleCrosser              &          0.33136 \\
+Nice Meta Winner           &          0.34921 \\
+PSO Gambler 2\_2\_2 Noise 05 &          0.35146 \\
+Grudger                    &          0.35156 \\
+Evolved HMM 5              &          0.35714 \\
+NMWE Memory One            &          0.35714 \\
+Nice Meta Winner Ensemble  &          0.35870 \\
+Forgetful Fool Me Once     &          0.35884 \\
 \bottomrule
 \end{tabular}
