--- a/paper/top_perfomances.tex
+++ b/paper/top_perfomances.tex
@@ -1,24 +1,24 @@
-\begin{tabular}{ggllggllr}
+\begin{tabular}{lggllggllr}
 \toprule
-\multicolumn{2}{g}{Standard} & \multicolumn{2}{c}{Noisy} & \multicolumn{2}{g}{Probabilistic ending} &  \multicolumn{2}{c}{Noisy probabilistic ending} \\
+& \multicolumn{2}{g}{Standard} & \multicolumn{2}{c}{Noisy} & \multicolumn{2}{g}{Probabilistic ending} &  \multicolumn{2}{c}{Noisy probabilistic ending} \\
 \midrule
-    Name &  $\bar{r}$ & Name &  $\bar{r}$ & Name &  $\bar{r}$ & Name &  $\bar{r}$\\
-    \midrule
-Evolved HMM 5           & 0.00658 & Grumpy              & 0.13953 & Fortress4         &  0.01266 & Alternator          & 0.30390\\
-Evolved FSM 16          & 0.00990 & $e$                 & 0.19048 & Defector          &  0.01444 & $\phi$              & 0.31025\\
-EvolvedLookerUp2 2 2    & 0.01064 & Cooperator          & 0.19565 & Better and Better &  0.01587 & $e$                 & 0.31293\\
-Evolved FSM 16 Noise 05 & 0.01639 & Tit For 2 Tats      & 0.20520 & Tricky Defector   &  0.01869 & $\pi$               & 0.31818\\
-PSO Gambler 2 2 2       & 0.02139 & Cycle Hunter        & 0.22222 & Fortress3         &  0.02198 & Limited Retaliate   & 0.35294\\
-Evolved ANN             & 0.02874 & Risky QLearner      & 0.22424 & Gradual Killer    &  0.02521 & Anti Tit For Tat    & 0.35429\\
-Evolved ANN 5           & 0.03390 & Retaliate 3         & 0.23077 & Aggravater        &  0.02797 & Retaliate 3         & 0.35484\\
-PSO Gambler 1 1 1       & 0.03723 & Retaliate 2         & 0.23762 & Raider            &  0.03077 & Limited Retaliate 3 & 0.35563\\
-Evolved FSM 4           & 0.04839 & Retaliate           & 0.24309 & Cycler DDC        &  0.04545 & Retaliate           & 0.35588\\
-PSO Gambler Mem1        & 0.05000 & Hard Tit For 2 Tats & 0.24658 & Hard Prober       &  0.05085 & Retaliate 2         & 0.35714\\
-Winner12                & 0.05946 & Limited Retaliate 3 & 0.25000 & SolutionB1        &  0.06040 & Limited Retaliate 2 & 0.36066\\
-Fool Me Once            & 0.06122 & ShortMem            & 0.25272 & Meta Minority     &  0.06040 & Hopeless            & 0.36913\\
-DBS                     & 0.07087 & Limited Retaliate   & 0.25698 & Bully             &  0.06061 & Arrogant QLearner   & 0.40526\\
-DoubleCrosser           & 0.07190 & Limited Retaliate 2 & 0.26027 & Fool Me Forever   &  0.07018 & Cautious QLearner   & 0.40711\\
-BackStabber             & 0.07500 & $\phi$              & 0.26201 & EasyGo            &  0.07065 & Risky QLearner      & 0.41989\\
-    \bottomrule
+& Name & $\bar{r}$ &                 Name & $\bar{r}$ &               Name & $\bar{r}$ &                 Name & $\bar{r}$ \\
+\midrule
+1 &           Evolved HMM 5 &   0.00667 &               Grumpy &    0.1402 &          Fortress4 &   0.01266 &           Alternator &    0.3037 \\
+2 &          Evolved FSM 16 &   0.00995 &                  $e$ &   0.19388 &           Defector &   0.01429 &               $\phi$ &   0.30978 \\
+3 &    EvolvedLookerUp2 2 2 &   0.01064 &       Tit For 2 Tats &    0.2069 &  Better and Better &   0.01587 &                  $e$ &    0.3125 \\
+4 & Evolved FSM 16 Noise 05 &   0.01667 &         Cycle Hunter &   0.21538 &    Tricky Defector &   0.01875 &                $\pi$ &   0.31686 \\
+5 &       PSO Gambler 2 2 2 &   0.02143 &       Risky QLearner &   0.22222 &          Fortress3 &   0.02174 &    Limited Retaliate &   0.35263 \\
+6 &             Evolved ANN &   0.02878 &          Retaliate 3 &   0.22887 &     Gradual Killer &   0.02532 &     Anti Tit For Tat &   0.35431 \\
+7 &           Evolved ANN 5 &    0.0339 &        Cycler CCCCCD &   0.23507 &         Aggravater &   0.02778 &          Retaliate 3 &   0.35563 \\
+8 &       PSO Gambler 1 1 1 &   0.03704 &          Retaliate 2 &   0.23913 &             Raider &   0.03077 &  Limited Retaliate 3 &   0.35563 \\
+9 &           Evolved FSM 4 &   0.04891 &      Defector Hunter &   0.24038 &         Cycler DDC &   0.04545 &            Retaliate &   0.35714 \\
+10 &        PSO Gambler Mem1 &   0.05036 &            Retaliate &   0.24177 &        Hard Prober &   0.05128 &          Retaliate 2 &   0.35767 \\
+11 &                Winner12 &   0.06011 &  Hard Tit For 2 Tats &      0.25 &         SolutionB1 &   0.06024 &  Limited Retaliate 2 &   0.36134 \\
+12 &            Fool Me Once &    0.0614 &             ShortMem &   0.25286 &      Meta Minority &   0.06077 &             Hopeless &   0.36842 \\
+13 &                     DBS &   0.07143 &  Limited Retaliate 3 &   0.25316 &              Bully &   0.06081 &    Arrogant QLearner &   0.40651 \\
+14 &           DoubleCrosser &     0.072 &    Limited Retaliate &   0.25706 &    Fool Me Forever &    0.0708 &    Cautious QLearner &   0.40909 \\
+15 &             BackStabber &   0.07519 &                $\pi$ &   0.25801 &             EasyGo &   0.07101 &      Fool Me Forever &   0.41764 \\
+\bottomrule
     \end{tabular}
     
